调整框架代码

--- a/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
+++ b/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
@@ -92,7 +92,7 @@ job.2=.md;README.md.job;#{artifactId}/#{artifactId}-job#{moduleSuffix}
 job.3=.xml;logback.xml.job;#{artifactId}/#{artifactId}-job#{moduleSuffix}/src/main/resources
 job.4=.xml;job.xml;#{artifactId}/#{artifactId}-job#{moduleSuffix}/src/main/resources/META-INF/config/local
 job.5=.properties;dubbo.properties.job;#{artifactId}/#{artifactId}-job#{moduleSuffix}/src/main/resources/META-INF/config/local
-job.6=.xml;spring-job.xml;#{artifactId}/#{artifactId}-job#{moduleSuffix}/src/main/resources/META-INF/config/spring
+job.6=.xml;spring-service.xml.job;#{artifactId}/#{artifactId}-job#{moduleSuffix}/src/main/resources/META-INF/config/spring
 job.7=.xml;job-task.xml;#{artifactId}/#{artifactId}-job#{moduleSuffix}/src/main/resources/META-INF/config/spring
 job.8=.java;JobImpl.java;#{artifactId}/#{artifactId}-job#{moduleSuffix}/src/main/java/com/#{company}/service/#{artifactId}/job
 job.9=.java;Startup.java.job;#{artifactId}/#{artifactId}-job#{moduleSuffix}/src/main/java/com/#{company}/service/#{artifactId}/job
@@ -100,7 +100,7 @@ job.10=.xml;dist.xml;#{artifactId}/#{artifactId}-job#{moduleSuffix}/src/main/ass
 
 #####################################
 
-web=1;2;3;4;5;6;7;8;9;10;11
+web=1;2;3;4;5;6;7;8;9;10;11;12;13
 web.1=.xml;pom.xml.web;#{artifactId}/#{artifactId}-web
 web.2=.md;README.md.web;#{artifactId}/#{artifactId}-web
 web.3=.xml;web.xml;#{artifactId}/#{artifactId}-web/src/main/webapp/WEB-INF
@@ -109,6 +109,8 @@ web.5=.tld;pager.tld;#{artifactId}/#{artifactId}-web/src/main/webapp/WEB-INF/tld
 web.6=.tld;security.tld;#{artifactId}/#{artifactId}-web/src/main/webapp/WEB-INF/tlds
 web.7=.xml;webapp.xml;#{artifactId}/#{artifactId}-web/src/main/resources/META-INF/config/local
 web.8=.properties;dubbo.properties.web;#{artifactId}/#{artifactId}-web/src/main/resources/META-INF/config/local
-web.9=.xml;spring-web.xml;#{artifactId}/#{artifactId}-web/src/main/resources/META-INF/config/spring
-web.10=.xml;spring-mvc.xml;#{artifactId}/#{artifactId}-web/src/main/resources/META-INF/config/spring
-web.11=.xml;spring-security.xml;#{artifactId}/#{artifactId}-web/src/main/resources/META-INF/config/spring
+web.9=.xml;beanRefContext.xml;#{artifactId}/#{artifactId}-web/src/main/resources/META-INF/config/spring
+web.10=.xml;spring-service.xml.web;#{artifactId}/#{artifactId}-web/src/main/resources/META-INF/config/spring
+web.11=.xml;spring-web.xml;#{artifactId}/#{artifactId}-web/src/main/resources/META-INF/config/spring
+web.12=.xml;spring-mvc.xml;#{artifactId}/#{artifactId}-web/src/main/resources/META-INF/config/spring
+web.13=.xml;spring-security.xml;#{artifactId}/#{artifactId}-web/src/main/resources/META-INF/config/spring
