--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,34 @@
 	<artifactId>tower</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
+	
+	<issueManagement>
+		<url>https://github.com/kevinsawicki/github-maven-example/issues</url>
+		<system>GitHub Issues</system>
+	</issueManagement>
+
+	<licenses>
+		<license>
+			<name>The Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
+
+	<scm>
+		<connection>scm:git:git@github.com:archlevel/tower.git</connection>
+		<developerConnection>scm:git:git@github.com:archlevel/tower.git</developerConnection>
+		<url>git@github.com:archlevel/tower.git</url>
+	</scm>
+	
+	<developers>
+		<developer>
+			<name>朱拱平</name>
+			<email>arch_level@126.com</email>
+			<organization>Sonatype</organization>
+			<organizationUrl>http://www.sonatype.com</organizationUrl>
+		</developer>
+	</developers>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<memcached.version>2.0.1</memcached.version>
@@ -385,6 +413,14 @@
 		<defaultGoal>package</defaultGoal>
 
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+					<tagNameFormat>v@{project.version}</tagNameFormat>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
