--- a/tower-config-maven-plugin/pom.xml
+++ b/tower-config-maven-plugin/pom.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
         <groupId>com.tower.soafw</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
         <artifactId>tower</artifactId>
 	</parent>
 	<artifactId>tower-config-maven-plugin</artifactId>
@@ -27,7 +25,7 @@
 		<dependency>
 			<groupId>com.tower.soafw</groupId>
 			<artifactId>tower-exception-gen-maven-plugin</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -62,7 +60,7 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore></ignore>
+										<ignore />
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
