--- a/tower-service/pom.xml
+++ b/tower-service/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.tower.soafw</groupId>
 		<artifactId>tower</artifactId>
-		<version>1.0</version>
+		<version>1.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>tower-service</artifactId>
 	<name>tower-service</name>
