--- a/tower-exception-manager/pom.xml
+++ b/tower-exception-manager/pom.xml
@@ -1,10 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
     <parent>
 		<artifactId>tower</artifactId>
 		<groupId>com.tower.soafw</groupId>
-		<version>1.1-SNAPSHOT</version>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
 	
     <artifactId>tower-exception-manager</artifactId>
@@ -13,7 +14,7 @@
     <url>http://maven.apache.org</url>
     <properties>
         <exception.enum.class>com.tower.soafw.exception.manager.ExceptionManagerExceptionMessage</exception.enum.class>
-        <exception.config />
+        <exception.config></exception.config>
         <exception.loadType>DB</exception.loadType>
         <spId>1</spId>
     </properties>
