--- a/tower-config-maven-plugin/pom.xml
+++ b/tower-config-maven-plugin/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
         <groupId>com.tower.soafw</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
         <artifactId>tower</artifactId>
 	</parent>
 	<artifactId>tower-config-maven-plugin</artifactId>
@@ -25,7 +25,7 @@
 		<dependency>
 			<groupId>com.tower.soafw</groupId>
 			<artifactId>tower-exception-gen-maven-plugin</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
