--- a/release.properties
+++ b/release.properties
@@ -1,12 +1,73 @@
 #release configuration
-#Mon Nov 02 12:58:23 CST 2015
-scm.tagNameFormat=v@{project.version}
-pushChanges=true
-scm.url=scm\:git\:git@github.com\:archlevel/tower.git
-preparationGoals=clean verify
-remoteTagging=true
-projectVersionPolicyId=default
-scm.commentPrefix=[maven-release-plugin] 
+#Mon Nov 02 13:01:26 CST 2015
+completedPhase=end-release
+project.scm.com.tower.soafw\:tower-log.empty=true
+project.rel.com.tower.soafw\:tower-test-maven-plugin=1.0
+project.dev.com.tower.soafw\:tower-test-maven-plugin=1.1-SNAPSHOT
+project.scm.com.tower.soafw\:tower-domain.empty=true
+project.dev.com.tower.soafw\:tower-config=1.1-SNAPSHOT
+project.rel.com.tower.soafw\:tower-cache=1.0
+project.scm.com.tower.soafw\:tower-job.empty=true
 exec.additionalArguments=-P nexus
+project.rel.com.tower.soafw\:tower-job=1.0
+project.rel.com.tower.soafw\:tower-config=1.0
+project.scm.com.tower.soafw\:tower-exception-manager.empty=true
 exec.snapshotReleasePluginAllowed=false
-completedPhase=check-poms
+project.rel.com.tower.soafw\:tower-exception-manager=1.0
+project.scm.com.tower.soafw\:tower.tag=HEAD
+project.dev.com.tower.soafw\:tower-exception-manager=1.1-SNAPSHOT
+project.rel.com.tower.soafw\:tower=1.0
+scm.tag=v1.0
+project.scm.com.tower.soafw\:tower-util.empty=true
+project.dev.com.tower.soafw\:tower-concurrent=1.1-SNAPSHOT
+project.rel.com.tower.soafw\:tower-exception-gen-maven-plugin=1.0
+project.dev.com.tower.soafw\:tower-exception-gen-maven-plugin=1.1-SNAPSHOT
+project.rel.com.tower.soafw\:tower-dao=1.0
+project.rel.com.tower.soafw\:tower-service-impl=1.0
+project.rel.com.tower.soafw\:tower-config-maven-plugin=1.0
+project.rel.com.tower.soafw\:tower-tools=1.0
+project.scm.com.tower.soafw\:tower-service-impl.empty=true
+project.scm.com.tower.soafw\:tower-mq.empty=true
+project.dev.com.tower.soafw\:tower-service=1.1-SNAPSHOT
+project.scm.com.tower.soafw\:tower-tools.empty=true
+project.scm.com.tower.soafw\:tower-concurrent.empty=true
+project.dev.com.tower.soafw\:tower-util=1.1-SNAPSHOT
+project.scm.com.tower.soafw\:tower.url=git@github.com\:archlevel/tower.git
+project.scm.com.tower.soafw\:tower-exception-gen-maven-plugin.empty=true
+remoteTagging=true
+project.dev.com.tower.soafw\:tower-mq=1.1-SNAPSHOT
+project.dev.com.tower.soafw\:tower-log=1.1-SNAPSHOT
+scm.url=scm\:git\:git@github.com\:archlevel/tower.git
+project.scm.com.tower.soafw\:tower-dao.empty=true
+project.dev.com.tower.soafw\:tower-rpc=1.1-SNAPSHOT
+scm.commentPrefix=[maven-release-plugin] 
+project.dev.com.tower.soafw\:tower-web=1.1-SNAPSHOT
+project.rel.com.tower.soafw\:tower-concurrent=1.0
+project.scm.com.tower.soafw\:tower.connection=scm\:git\:git@github.com\:archlevel/tower.git
+project.dev.com.tower.soafw\:tower-cache=1.1-SNAPSHOT
+project.rel.com.tower.soafw\:tower-util=1.0
+project.scm.com.tower.soafw\:tower-rpc.empty=true
+project.scm.com.tower.soafw\:tower-test-maven-plugin.empty=true
+project.scm.com.tower.soafw\:tower-cache.empty=true
+project.dev.com.tower.soafw\:tower=1.1-SNAPSHOT
+pushChanges=true
+project.rel.com.tower.soafw\:tower-mq=1.0
+projectVersionPolicyId=default
+project.dev.com.tower.soafw\:tower-domain=1.1-SNAPSHOT
+project.scm.com.tower.soafw\:tower-config-maven-plugin.empty=true
+project.dev.com.tower.soafw\:tower-job=1.1-SNAPSHOT
+project.rel.com.tower.soafw\:tower-domain=1.0
+project.dev.com.tower.soafw\:tower-config-maven-plugin=1.1-SNAPSHOT
+preparationGoals=clean verify
+project.scm.com.tower.soafw\:tower-config.empty=true
+project.scm.com.tower.soafw\:tower.developerConnection=scm\:git\:git@github.com\:archlevel/tower.git
+project.dev.com.tower.soafw\:tower-tools=1.1-SNAPSHOT
+project.dev.com.tower.soafw\:tower-service-impl=1.1-SNAPSHOT
+scm.tagNameFormat=v@{project.version}
+project.scm.com.tower.soafw\:tower-service.empty=true
+project.rel.com.tower.soafw\:tower-log=1.0
+project.rel.com.tower.soafw\:tower-service=1.0
+project.scm.com.tower.soafw\:tower-web.empty=true
+project.dev.com.tower.soafw\:tower-dao=1.1-SNAPSHOT
+project.rel.com.tower.soafw\:tower-rpc=1.0
+project.rel.com.tower.soafw\:tower-web=1.0
