--- a/tower-cache/pom.xml
+++ b/tower-cache/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.tower.soafw</groupId>
-		<version>1.1-SNAPSHOT</version>
+		<version>1.1</version>
 		<artifactId>tower</artifactId>
 	</parent>
 	<artifactId>tower-cache</artifactId>
