--- a/tower-concurrent/pom.xml
+++ b/tower-concurrent/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.tower.soafw</groupId>
-		<version>1.1</version>
+		<version>1.2-SNAPSHOT</version>
 		<artifactId>tower</artifactId>
 	</parent>
 	<artifactId>tower-concurrent</artifactId>
