--- a/tower-dao/pom.xml
+++ b/tower-dao/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.tower.soafw</groupId>
 		<artifactId>tower</artifactId>
-		<version>1.1</version>
+		<version>1.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>tower-dao</artifactId>
 	<name>tower-dao</name>
