--- a/tower-config-maven-plugin/pom.xml
+++ b/tower-config-maven-plugin/pom.xml
@@ -11,12 +11,28 @@
 	<name>tower-config-maven-plugin</name>
 	<url>http://maven.apache.org</url>
 	<properties>
+		<mavenVersion>2.2.1</mavenVersion>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-plugin-api</artifactId>
-			<version>2.0</version>
+			<version>${mavenVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-artifact</artifactId>
+			<version>${mavenVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-model</artifactId>
+			<version>${mavenVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-project</artifactId>
+			<version>${mavenVersion}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-configuration</groupId>
