--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.tower.soafw</groupId>
 	<artifactId>tower</artifactId>
-	<version>2.0</version>
+	<version>2.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	
 	<issueManagement>
@@ -22,7 +22,7 @@
 		<connection>scm:git:git@github.com:archlevel/tower.git</connection>
 		<developerConnection>scm:git:git@github.com:archlevel/tower.git</developerConnection>
 		<url>git@github.com:archlevel/tower.git</url>
-	  	<tag>2.0</tag>
+	  	<tag>HEAD</tag>
   	</scm>
 	
 	<developers>
