修复代码生成器框架

--- a/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
+++ b/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
@@ -72,7 +72,7 @@ mq.3=.xml;spring-mq.xml;#{artifactId}/#{artifactId}-mq/src/main/resources/META-I
 
 #####################################
 
-service-impl=1;2;3;4;5;6;7;8;9
+service-impl=1;2;3;4;5;6;7;8;9;10
 service-impl.1=.xml;pom.xml.svc.impl;#{artifactId}/#{artifactId}-service-impl
 service-impl.2=.md;README.md.service;#{artifactId}/#{artifactId}-service-impl
 service-impl.3=.xml;logback.xml.service;#{artifactId}/#{artifactId}-service-impl/src/main/resources
@@ -81,7 +81,8 @@ service-impl.5=.properties;dubbo.properties;#{artifactId}/#{artifactId}-service-
 service-impl.6=.xml;spring-service.xml;#{artifactId}/#{artifactId}-service-impl/src/main/resources/META-INF/config/spring
 service-impl.7=.java;Startup.java.service;#{artifactId}/#{artifactId}-service-impl/src/main/java/com/#{company}/service/#{artifactId}
 service-impl.8=.java;LogAspect.java;#{artifactId}/#{artifactId}-service-impl/src/main/java/com/#{company}/service/#{artifactId}/aop
-service-impl.9=.xml;dist.xml;#{artifactId}/#{artifactId}-service-impl/src/main/assemble
+service-impl.9=.java;TxAspect.java;#{artifactId}/#{artifactId}-service-impl/src/main/java/com/#{company}/service/#{artifactId}/aop
+service-impl.10=.xml;dist.xml;#{artifactId}/#{artifactId}-service-impl/src/main/assemble
 
 
 #####################################
