--- a/tower-rpc/pom.xml
+++ b/tower-rpc/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.tower.soafw</groupId>
-		<version>2.1-SNAPSHOT</version>
+		<version>2.1</version>
 		<artifactId>tower</artifactId>
 	</parent>
 	<artifactId>tower-rpc</artifactId>
