--- a/tower-exception-gen-maven-plugin/pom.xml
+++ b/tower-exception-gen-maven-plugin/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>tower</artifactId>
 		<groupId>com.tower.soafw</groupId>
-		<version>2.1</version>
+		<version>2.2-SNAPSHOT</version>
 	</parent>
 
 	<properties>
