项目代码生成器：依赖框架版本号

--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,12 @@
 				<artifactId>tower-web</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+			
+			<dependency>
+				<groupId>com.tower.soafw</groupId>
+				<artifactId>tower-exception-gen-maven-plugin</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 			<!-- -->
 
 			<dependency>
