--- a/tower-config-maven-plugin/pom.xml
+++ b/tower-config-maven-plugin/pom.xml
@@ -35,14 +35,15 @@
 			<version>${mavenVersion}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-plugin-descriptor</artifactId>
+			<version>${mavenVersion}</version>
+		</dependency>
+		<dependency>
 			<groupId>commons-configuration</groupId>
 			<artifactId>commons-configuration</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>com.tower.soafw</groupId>
-			<artifactId>tower-exception-gen-maven-plugin</artifactId>
-			<version>2.2-SNAPSHOT</version>
-		</dependency>
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
