--- a/tower-test-maven-plugin/pom.xml
+++ b/tower-test-maven-plugin/pom.xml
@@ -42,6 +42,7 @@
 			<artifactId>maven-project</artifactId>
 			<version>${mavenVersion}</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.maven.reporting</groupId>
 			<artifactId>maven-reporting-api</artifactId>
@@ -50,6 +51,11 @@
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-plugin-api</artifactId>
+			<version>${mavenVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-plugin-descriptor</artifactId>
 			<version>${mavenVersion}</version>
 		</dependency>
 		<dependency>
