新增&修复代码框架生成代码版本依赖框架版本

--- a/tower-config-maven-plugin/pom.xml
+++ b/tower-config-maven-plugin/pom.xml
@@ -40,6 +40,10 @@
 			<version>${mavenVersion}</version>
 		</dependency>
 		<dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+		<dependency>
 			<groupId>commons-configuration</groupId>
 			<artifactId>commons-configuration</artifactId>
 		</dependency>
