--- a/tower-domain/pom.xml
+++ b/tower-domain/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.tower.soafw</groupId>
 		<artifactId>tower</artifactId>
-		<version>2.2-SNAPSHOT</version>
+		<version>2.2.1</version>
 	</parent>
 	<artifactId>tower-domain</artifactId>
 	<name>tower-domain</name>
