--- a/tower-exception-manager/pom.xml
+++ b/tower-exception-manager/pom.xml
@@ -4,7 +4,7 @@
     <parent>
 		<artifactId>tower</artifactId>
 		<groupId>com.tower.soafw</groupId>
-		<version>2.2.1</version>
+		<version>2.2.2-SNAPSHOT</version>
 	</parent>
 	
     <artifactId>tower-exception-manager</artifactId>
