--- a/tower-test-maven-plugin/pom.xml
+++ b/tower-test-maven-plugin/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.tower.soafw</groupId>
 		<artifactId>tower</artifactId>
-		<version>2.2.1</version>
+		<version>2.2.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>tower-test-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
