--- a/tower-util/pom.xml
+++ b/tower-util/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.tower.soafw</groupId>
-		<version>2.2.1</version>
+		<version>2.2.2-SNAPSHOT</version>
 		<artifactId>tower</artifactId>
 	</parent>
 	<artifactId>tower-util</artifactId>
