--- a/tower-job/pom.xml
+++ b/tower-job/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.tower.soafw</groupId>
 		<artifactId>tower</artifactId>
-		<version>2.2.2-SNAPSHOT</version>
+		<version>2.2.2</version>
 	</parent>
 	<artifactId>tower-job</artifactId>
 	<name>tower-job</name>
