--- a/tower-log/pom.xml
+++ b/tower-log/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.tower.soafw</groupId>
-		<version>2.2.2-SNAPSHOT</version>
+		<version>2.2.2</version>
 		<artifactId>tower</artifactId>
 	</parent>
 	<artifactId>tower-log</artifactId>
