--- a/tower-web/pom.xml
+++ b/tower-web/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.tower.soafw</groupId>
 		<artifactId>tower</artifactId>
-		<version>2.2.2</version>
+		<version>2.2.3-SNAPSHOT</version>
 	</parent>
 	<artifactId>tower-web</artifactId>
 	<name>tower-web</name>
