新增hello service demo

--- a/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
+++ b/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
@@ -52,9 +52,10 @@ domain.1=.xml;pom.xml.domain;#{artifactId}/#{artifactId}-domain
 
 #####################################
 
-service=1;2
+service=1;2;
 service.1=.xml;pom.xml.svc;#{artifactId}/#{artifactId}-service
-service.2=;SPID;#{artifactId}/#{artifactId}-service/src/main/resources/META-INF
+service.2=.java;IHelloService.java;#{artifactId}/#{artifactId}-service/src/main/java/com/#{company}/service/#{artifactId}
+service.3=;SPID;#{artifactId}/#{artifactId}-service/src/main/resources/META-INF
 
 #####################################
 
@@ -82,7 +83,7 @@ service-impl.6=.xml;spring-service.xml;#{artifactId}/#{artifactId}-service-impl/
 service-impl.7=.java;Startup.java.service;#{artifactId}/#{artifactId}-service-impl/src/main/java/com/#{company}/service/#{artifactId}
 service-impl.8=.java;LogAspect.java;#{artifactId}/#{artifactId}-service-impl/src/main/java/com/#{company}/service/#{artifactId}/aop
 service-impl.9=.java;TxAspect.java;#{artifactId}/#{artifactId}-service-impl/src/main/java/com/#{company}/service/#{artifactId}/aop
-service-impl.10=.java;HelloImpl.java;#{artifactId}/#{artifactId}-service-impl/src/main/java/com/#{company}/service/#{artifactId}/impl
+service-impl.10=.java;HelloServiceImpl.java;#{artifactId}/#{artifactId}-service-impl/src/main/java/com/#{company}/service/#{artifactId}/impl
 service-impl.11=.xml;dist.xml;#{artifactId}/#{artifactId}-service-impl/src/main/assemble
 
 
