--- a/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
+++ b/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
@@ -98,12 +98,12 @@ job.5=.properties;dubbo.properties.job;#{artifactId}/#{artifactId}-job#{moduleSu
 job.6=.xml;spring-service.xml.job;#{artifactId}/#{artifactId}-job#{moduleSuffix}/src/main/resources/META-INF/config/spring
 job.7=.xml;job-task.xml;#{artifactId}/#{artifactId}-job#{moduleSuffix}/src/main/resources/META-INF/config/spring
 job.8=.java;JobImpl.java;#{artifactId}/#{artifactId}-job#{moduleSuffix}/src/main/java/com/#{company}/service/#{artifactId}/job
-job.9=.java;Startup.java.job;#{artifactId}/#{artifactId}-job#{moduleSuffix}/src/main/java/com/#{company}/service/#{artifactId}/job
+job.9=.java;Startup.java.job;#{artifactId}/#{artifactId}-job#{moduleSuffix}/src/main/java/com/#{company}/service/#{artifactId}
 job.10=.xml;dist.xml;#{artifactId}/#{artifactId}-job#{moduleSuffix}/src/main/assemble
 
 #####################################
 
-web=1;2;3;4;5;6;7;8;9;10;11;12;13
+web=1;2;3;4;5;6;7;8;9;10;11;12;13;14;15
 web.1=.xml;pom.xml.web;#{artifactId}/#{artifactId}-web
 web.2=.md;README.md.web;#{artifactId}/#{artifactId}-web
 web.3=.xml;web.xml;#{artifactId}/#{artifactId}-web/src/main/webapp/WEB-INF
@@ -117,3 +117,5 @@ web.10=.xml;spring-service.xml.web;#{artifactId}/#{artifactId}-web/src/main/reso
 web.11=.xml;spring-web.xml;#{artifactId}/#{artifactId}-web/src/main/resources/META-INF/config/spring
 web.12=.xml;spring-mvc.xml;#{artifactId}/#{artifactId}-web/src/main/resources/META-INF/config/spring
 web.13=.xml;spring-security.xml;#{artifactId}/#{artifactId}-web/src/main/resources/META-INF/config/spring
+web.14=.java;LogAspect.java;#{artifactId}/#{artifactId}-web/src/main/java/com/#{company}/service/#{artifactId}/aop
+web.15=.java;HelloResource.java;#{artifactId}/#{artifactId}-web/src/main/java/com/#{company}/service/#{artifactId}/resource
