service 依赖调整 rpc&mq mv from service impl 2 service

--- a/tower-service/pom.xml
+++ b/tower-service/pom.xml
@@ -23,7 +23,14 @@
 			<groupId>com.tower.soafw</groupId>
 			<artifactId>tower-concurrent</artifactId>
 		</dependency>
-		
+		<dependency>
+			<groupId>com.tower.soafw</groupId>
+			<artifactId>tower-mq</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.tower.soafw</groupId>
+			<artifactId>tower-rpc</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
