调整框架依赖图

--- a/tower-cache/pom.xml
+++ b/tower-cache/pom.xml
@@ -15,12 +15,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.tower.soafw</groupId>
-			<artifactId>tower-config</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>com.tower.soafw</groupId>
-			<artifactId>tower-log</artifactId>
+			<artifactId>tower-concurrent</artifactId>
 		</dependency>
 
 		<dependency>
