--- a/tower-rpc/pom.xml
+++ b/tower-rpc/pom.xml
@@ -16,7 +16,7 @@
 
 		<dependency>
 			<groupId>com.tower.soafw</groupId>
-			<artifactId>tower-config</artifactId>
+			<artifactId>tower-concurrent</artifactId>
 		</dependency>
 		
 		<dependency>
