--- a/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
+++ b/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
@@ -1,5 +1,6 @@
 
-modules=root;common;config;cache;dao;domain;service;mq;rpc;job;web;service-impl
+#smodules=root;common;config;cache;dao;domain;service;mq;rpc;job;web;service-impl
+modules=root;common;cache;dao;domain;service;mq;rpc;job;web;service-impl
 
 #a=sufix;template;dir;...
 root=1;2;3;4;5;6;7;8;9;10
@@ -21,9 +22,9 @@ common.1=.xml;pom.xml.util;#{artifactId}/#{artifactId}-util
 
 #####################################
 
-config=1;2
-config.1=.xml;pom.xml.config;#{artifactId}/#{artifactId}-config;
-config.2=.md;README.md.config;#{artifactId}/#{artifactId}-config
+#config=1;2
+#config.1=.xml;pom.xml.config;#{artifactId}/#{artifactId}-config;
+#config.2=.md;README.md.config;#{artifactId}/#{artifactId}-config
 
 #####################################
 
