优化缓存机制

--- a/tower-service/pom.xml
+++ b/tower-service/pom.xml
@@ -21,6 +21,10 @@
 		</dependency>
 		<dependency>
 			<groupId>com.tower.soafw</groupId>
+			<artifactId>tower-cache</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.tower.soafw</groupId>
 			<artifactId>tower-mq</artifactId>
 		</dependency>
 		<dependency>
