--- a/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
+++ b/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
@@ -82,7 +82,7 @@ service-impl.4=.xml;service.xml;#{artifactId}/#{artifactId}-service-impl/src/mai
 service-impl.5=.properties;dubbo.properties;#{artifactId}/#{artifactId}-service-impl/src/main/resources/META-INF/config/local
 service-impl.6=.xml;spring-service.xml;#{artifactId}/#{artifactId}-service-impl/src/main/resources/META-INF/config/spring
 service-impl.7=.java;Startup.java.service;#{artifactId}/#{artifactId}-service-impl/src/main/java/com/#{company}/service/#{artifactId}
-service-impl.8=.java;AccessLogerAspect.java;#{artifactId}/#{artifactId}-service-impl/src/main/java/com/#{company}/service/#{artifactId}/aop
+service-impl.8=.java;ServiceLogerAspect.java;#{artifactId}/#{artifactId}-service-impl/src/main/java/com/#{company}/service/#{artifactId}/aop
 service-impl.9=.java;XCacheAspect.java;#{artifactId}/#{artifactId}-service-impl/src/main/java/com/#{company}/service/#{artifactId}/aop
 service-impl.10=.java;HelloServiceImpl.java;#{artifactId}/#{artifactId}-service-impl/src/main/java/com/#{company}/service/#{artifactId}/impl
 service-impl.11=.xml;dist.xml;#{artifactId}/#{artifactId}-service-impl/src/main/assemble
@@ -118,5 +118,5 @@ web.10=.xml;spring-service.xml.web;#{artifactId}/#{artifactId}-web/src/main/reso
 web.11=.xml;spring-web.xml;#{artifactId}/#{artifactId}-web/src/main/resources/META-INF/config/spring
 web.12=.xml;spring-mvc.xml;#{artifactId}/#{artifactId}-web/src/main/resources/META-INF/config/spring
 web.13=.xml;spring-security.xml;#{artifactId}/#{artifactId}-web/src/main/resources/META-INF/config/spring
-web.14=.java;LogAspect.java;#{artifactId}/#{artifactId}-web/src/main/java/com/#{company}/service/#{artifactId}/aop
+web.14=.java;WebLogerAspect.java;#{artifactId}/#{artifactId}-web/src/main/java/com/#{company}/service/#{artifactId}/aop
 web.15=.java;HelloResource.java;#{artifactId}/#{artifactId}-web/src/main/java/com/#{company}/service/#{artifactId}/resource
